igt@xe_pm_residency@toggle-gt-c6 - fail - CRITICAL: Test assertion failure function toggle_gt_c6 CRITICAL: Failed assertion: gt_c6_power < gt_c0_power
(xe_pm_residency:2197) CRITICAL: Test assertion failure function toggle_gt_c6, file ../tests/intel/xe_pm_residency.c:322:
(xe_pm_residency:2197) CRITICAL: Failed assertion: gt_c6_power < gt_c0_power
(xe_pm_residency:2197) CRITICAL: Power consumed in GT C6 should be lower than GT C0
Subtest toggle-gt-c6 failed.
**** DEBUG ****
(xe_pm_residency:2197) igt_sysfs-DEBUG: Condition fd < 0 occurred in function igt_sysfs_scanf, file ../lib/igt_sysfs.c:702
(xe_pm_residency:2197) igt_sysfs-DEBUG: Condition fd < 0 occurred in function igt_sysfs_scanf, file ../lib/igt_sysfs.c:702
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 63ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 65ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 64ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 65ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 0ms
(xe_pm_residency:2197) DEBUG: xe_is_gt_in_c6(fd, gt) took 65ms```